--- a/Examples.ipynb
+++ b/Examples.ipynb
@@ -32,6 +32,25 @@
    "source": [
     "import EPTools"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.4677695847969117e-14\n"
+     ]
+    }
+   ],
+   "source": [
+    "flx = EPTools.utils.mag2flx(21.1)\n",
+    "delta_nu = EPTools.utils.lam2Hz(6396-1230) - EPTools.utils.lam2Hz(6396+1230)\n",
+    "print(delta_nu * flx)"
+   ]
   }
  ],
  "metadata": {
