--- a/Examples.ipynb
+++ b/Examples.ipynb
@@ -35,13 +35,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "2.4677695847969117e-14\n",
       "2.4677695847969117e-14\n"
      ]
     }
@@ -49,7 +50,8 @@
    "source": [
     "flx = EPTools.utils.mag2flx(21.1)\n",
     "delta_nu = EPTools.utils.lam2Hz(6396-1230) - EPTools.utils.lam2Hz(6396+1230)\n",
-    "print(delta_nu * flx)"
+    "print(delta_nu * flx)\n",
+    "print(EPTools.utils.mag2flx(21.1,6396,1230))"
    ]
   }
  ],
