--- a/Examples.ipynb
+++ b/Examples.ipynb
@@ -17,20 +17,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/liangrunduo/miniconda3/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import EPTools"
+    "import EPTools\n",
+    "from astropy.cosmology import Planck18"
    ]
   },
   {
@@ -53,6 +45,30 @@
     "print(delta_nu * flx)\n",
     "print(EPTools.utils.mag2flx(21.1,6396,1230))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8.608951776806629e+46\n"
+     ]
+    }
+   ],
+   "source": [
+    "import EPTools.utils\n",
+    "\n",
+    "\n",
+    "z = 0.75\n",
+    "xflx = 10**(-10.5)\n",
+    "dL = Planck18.luminosity_distance(z).value * 1e6 #Mpc\n",
+    "\n",
+    "print(EPTools.utils.flx2lum(xflx,dL))"
+   ]
   }
  ],
  "metadata": {
@@ -71,7 +87,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
