--- a/Examples.ipynb
+++ b/Examples.ipynb
@@ -17,57 +17,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "import EPTools\n",
-    "from astropy.cosmology import Planck18"
+    "from astropy.cosmology import Planck18\n",
+    "from astropy.coordinates import SkyCoord\n",
+    "import EPTools.utils"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.4677695847969117e-14\n",
-      "2.4677695847969117e-14\n"
+      "Welcome to ASAS-SN Skypatrol!\n",
+      "\n",
+      "Current Deployment Version: 0.6.17 (26 JAN 2024)\n",
+      "Please upgrade your client if not up to date.\n",
+      "\n",
+      "<No columns>\n"
      ]
-    }
-   ],
-   "source": [
-    "flx = EPTools.utils.mag2flx(21.1)\n",
-    "delta_nu = EPTools.utils.lam2Hz(6396-1230) - EPTools.utils.lam2Hz(6396+1230)\n",
-    "print(delta_nu * flx)\n",
-    "print(EPTools.utils.mag2flx(21.1,6396,1230))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
+    },
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "8.608951776806629e+46\n"
+      "WARNING: NoResultsWarning: No matching rows were found in the query. [astroquery.heasarc.core]\n"
      ]
     }
    ],
    "source": [
-    "import EPTools.utils\n",
+    "crossmatch = EPTools.Crossmatch()\n",
     "\n",
+    "pos = '11h44m03.1835850144s +05d47m44.014153920s'\n",
     "\n",
-    "z = 0.75\n",
-    "xflx = 10**(-10.5)\n",
-    "dL = Planck18.luminosity_distance(z).value * 1e6 #Mpc\n",
-    "\n",
-    "print(EPTools.utils.flx2lum(xflx,dL))"
+    "data = crossmatch.xmm_archive(pos)\n",
+    "print(data)"
    ]
   }
  ],
