--- a/Examples.ipynb
+++ b/Examples.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,6 +25,27 @@
     "from astropy.cosmology import Planck18\n",
     "from astropy.coordinates import SkyCoord\n",
     "import EPTools.utils"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lum: 4.330333114875513e+43 erg/s\n"
+     ]
+    }
+   ],
+   "source": [
+    "f = 2e-12\n",
+    "\n",
+    "dL = Planck18.luminosity_distance(0.09).value * 1e6\n",
+    "\n",
+    "print('lum: {} erg/s'.format(EPTools.utils.flx2lum(f,dL)))"
    ]
   },
   {
