--- a/Examples.ipynb
+++ b/Examples.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,21 +36,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9.671709490743524"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Time('2024-10-30T20:59:50.7',format='isot', scale='utc').mjd - Time('2024-10-21T04:52:35',format='isot', scale='utc').mjd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.6218585848832475e+33\n",
+      "1.4462399941120547e+32\n",
       "5.7218389587855725e+47\n"
      ]
     }
    ],
    "source": [
-    "d = 1000/0.9487\n",
-    "f = 1.22e-11\n",
+    "d = 1000/5.5027\n",
+    "f = 3.66e-11\n",
     "print(flx2lum(f,d))\n",
     "\n",
     "f = 1e-11\n",
