--- a/Examples.ipynb
+++ b/Examples.ipynb
@@ -55,7 +55,8 @@
     "\n",
     "f = 1e-11\n",
     "d = Planck18.luminosity_distance(2.597000).value * 1e6\n",
-    "print(flx2lum(f,d))"
+    "print(flx2lum(f,d))\n",
+    "\n"
    ]
   },
   {
