add GW crossmatch

--- a/Examples.ipynb
+++ b/Examples.ipynb
@@ -19,19 +19,167 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/lib/python3.12/site-packages/ligo/lw/lsctables.py:89: UserWarning: Wswiglal-redir-stdio:\n",
+      "\n",
+      "SWIGLAL standard output/error redirection is enabled in IPython.\n",
+      "This may lead to performance penalties. To disable locally, use:\n",
+      "\n",
+      "with lal.no_swig_redirect_standard_output_error():\n",
+      "    ...\n",
+      "\n",
+      "To disable globally, use:\n",
+      "\n",
+      "lal.swig_redirect_standard_output_error(False)\n",
+      "\n",
+      "Note however that this will likely lead to error messages from\n",
+      "LAL functions being either misdirected or lost when called from\n",
+      "Jupyter notebooks.\n",
+      "\n",
+      "To suppress this warning, use:\n",
+      "\n",
+      "import warnings\n",
+      "warnings.filterwarnings(\"ignore\", \"Wswiglal-redir-stdio\")\n",
+      "import lal\n",
+      "\n",
+      "  import lal\n"
+     ]
+    }
+   ],
    "source": [
     "import EPTools\n",
-    "from astropy.cosmology import Planck18\n",
     "from astropy.coordinates import SkyCoord\n",
     "from EPTools.utils import *\n",
     "import numpy as np\n",
+    "from astropy.cosmology import Planck18\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
+    "from astroquery.vizier import Vizier, VizierClass\n",
+    "from ligo.skymap.postprocess import crossmatch\n",
+    "from astropy.table import Table\n",
+    "from ligo.skymap.io.fits import read_sky_map\n",
     "from astropy.config import create_config_file\n",
     "from astropy.config import get_config_dir\n",
     "#create_config_file('astropy')\n",
     "#get_config_dir()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Get Catalogue"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'Convert milliquas into astropy.table'\n",
+    "with open('/Users/liangrunduo/EP/Catalogue/milliquas.txt') as f:\n",
+    "    data = f.read()\n",
+    "table = Table.read('/Users/liangrunduo/EP/Catalogue/Milliquas.fits',format='fits')\n",
+    "table.write('/Users/liangrunduo/EP/Catalogue/Milliquas.csv', format=\"csv\", overwrite=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'Get ALLWISE AGN Catalogue via Vizier'\n",
+    "catalog_id = \"J/ApJS/221/12\"  #ALLWISE AGN Catalogue\n",
+    "#catalog_id = \"IX/57/xmm4xmm\"  #XMM-Newton Serendipitous Source Catalog\n",
+    "vizier = VizierClass(\n",
+    "    row_limit=-1,\n",
+    "    columns=['recno', 'WISEA', '_RAJ2000', '_DEJ2000', 'W1-W2','gmag','z','f_z','HMQ'])\n",
+    "cat, = vizier.get_catalogs(catalog_id)\n",
+    "cat.sort('recno')  # sort catalog so that doctest output is stable\n",
+    "del cat['recno']\n",
+    "dist = Planck18.luminosity_distance(cat['z'])\n",
+    "cat.write('/Users/liangrunduo/EP/Catalogue/WISE_AGN.csv', format=\"csv\", overwrite=True)\n",
+    "#coordinates = SkyCoord(cat['_RAJ2000'], cat['_DEJ2000'], dist)\n",
+    "coordinates = SkyCoord(cat['_RAJ2000'], cat['_DEJ2000'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Crossmatch with GW"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load the CSV file into an Astropy Table\n",
+    "wise_agn_table = Table.read(\"/Users/liangrunduo/EP/Catalogue/WISE_AGN.csv\", format=\"csv\")\n",
+    "milliquas_table = Table.read(\"/Users/liangrunduo/EP/Catalogue/Milliquas.csv\", format=\"csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     RA        DEC          NAME       ...         LOBE1          LOBE2\n",
+      "----------- --------- ---------------- ... ---------------------- -----\n",
+      "346.9886014 40.277528 PBC J2307.9+4015 ... XMMSL J230757.0+401643    --\n",
+      "  _RAJ2000   _DEJ2000         WISEA        W1-W2 gmag   z   f_z       HMQ       \n",
+      "----------- ---------- ------------------- ----- ---- ----- --- ----------------\n",
+      "346.9885791 40.2775306 J230757.25+401639.1  0.79   -- 0.073   s PBC J2307.9+4015\n"
+     ]
+    }
+   ],
+   "source": [
+    "skymap = read_sky_map('https://gracedb.ligo.org/api/superevents/S241102br/files/bayestar.multiorder.fits',moc=True)\n",
+    "#skymap = read_sky_map('/Users/liangrunduo/EP/GW/S241102br_skymap.fits',moc=True)\n",
+    "milliquas_table_valid = milliquas_table[milliquas_table['Z']>0]\n",
+    "dist = Planck18.luminosity_distance(milliquas_table_valid['Z'])\n",
+    "coordinates = SkyCoord(milliquas_table_valid['RA']*u.deg, milliquas_table_valid['DEC']*u.deg, dist)\n",
+    "result = crossmatch(skymap, coordinates)\n",
+    "print(milliquas_table_valid[result.searched_prob_vol < 0.9])\n",
+    "\n",
+    "wise_agn_table_valid = wise_agn_table[wise_agn_table['z']>0]\n",
+    "dist = Planck18.luminosity_distance(wise_agn_table_valid['z'])\n",
+    "coordinates = SkyCoord(wise_agn_table_valid['_RAJ2000']*u.deg, wise_agn_table_valid['_DEJ2000']*u.deg, dist)\n",
+    "result = crossmatch(skymap, coordinates)\n",
+    "print(wise_agn_table_valid[result.searched_prob_vol < 0.9])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " _RAJ2000   _DEJ2000         WISEA        W1-W2 gmag  z  f_z HMQ\n",
+      "---------- ---------- ------------------- ----- ---- --- --- ---\n",
+      "15.3030541 -2.1704141 J010112.73-021013.4  1.71   --  --  --  --\n"
+     ]
+    }
+   ],
+   "source": [
+    "url = 'https://gracedb.ligo.org/api/superevents/S190814bv/files/bayestar.multiorder.fits'\n",
+    "skymap = read_sky_map(url, moc=True)\n",
+    "result = crossmatch(skymap, coordinates)\n",
+    "print(wise_agn_table[result.searched_prob_vol < 0.9])"
    ]
   },
   {
@@ -214,7 +362,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -228,7 +376,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
