--- a/GW_O4.ipynb
+++ b/GW_O4.ipynb
@@ -9,9 +9,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/lib/python3.12/site-packages/ligo/lw/lsctables.py:89: UserWarning: Wswiglal-redir-stdio:\n",
+      "\n",
+      "SWIGLAL standard output/error redirection is enabled in IPython.\n",
+      "This may lead to performance penalties. To disable locally, use:\n",
+      "\n",
+      "with lal.no_swig_redirect_standard_output_error():\n",
+      "    ...\n",
+      "\n",
+      "To disable globally, use:\n",
+      "\n",
+      "lal.swig_redirect_standard_output_error(False)\n",
+      "\n",
+      "Note however that this will likely lead to error messages from\n",
+      "LAL functions being either misdirected or lost when called from\n",
+      "Jupyter notebooks.\n",
+      "\n",
+      "To suppress this warning, use:\n",
+      "\n",
+      "import warnings\n",
+      "warnings.filterwarnings(\"ignore\", \"Wswiglal-redir-stdio\")\n",
+      "import lal\n",
+      "\n",
+      "  import lal\n"
+     ]
+    }
+   ],
    "source": [
     "import EPTools\n",
     "import sys\n",
@@ -269,79 +299,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "S230529ay Dist = 197.180803380434,  A90 = 39500.51957692001\n",
+      "S230529ay Dist = 197.180803380434\n",
       ".DS_Store\n",
-      "S240925n Dist = 322.535141854722,  A90 = 8443.787087306931\n",
-      "S230814ah Dist = 329.5829480845621,  A90 = 39214.914053559885\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/anaconda3/lib/python3.12/site-packages/ligo/skymap/extern/numpy/quantile.py:253: RuntimeWarning: overflow encountered in divide\n",
-      "  ws_sorted[nonzero_w_inds] / ws_sorted[nonzero_w_inds].min()\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "S241102br Dist = 364.0146333412772,  A90 = 28.84723682092313\n",
-      "S240429an Dist = 13.662503404808366,  A90 = 24836.964756067406\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/anaconda3/lib/python3.12/site-packages/ligo/skymap/extern/numpy/quantile.py:253: RuntimeWarning: overflow encountered in divide\n",
-      "  ws_sorted[nonzero_w_inds] / ws_sorted[nonzero_w_inds].min()\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "S230627c Dist = 290.9508721767887,  A90 = 213.28871790300644\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/anaconda3/lib/python3.12/site-packages/ligo/skymap/extern/numpy/quantile.py:253: RuntimeWarning: overflow encountered in divide\n",
-      "  ws_sorted[nonzero_w_inds] / ws_sorted[nonzero_w_inds].min()\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "S240422ed Dist = 188.18928254533978,  A90 = 271.6338681732656\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/anaconda3/lib/python3.12/site-packages/ligo/skymap/extern/numpy/quantile.py:253: RuntimeWarning: overflow encountered in divide\n",
-      "  ws_sorted[nonzero_w_inds] / ws_sorted[nonzero_w_inds].min()\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "S241011k Dist = 212.20409963130336,  A90 = 115.1641065024183\n",
-      "S230810af Dist = 100.4032777442462,  A90 = 37324.56649824732\n",
-      "S230830b Dist = 214.0960402190468,  A90 = 993.0818538896193\n"
+      "S240925n Dist = 322.535141854722\n",
+      "S230814ah Dist = 329.5829480845621\n",
+      "S241102br Dist = 364.0146333412772\n",
+      "S240429an Dist = 13.662503404808366\n",
+      "S230627c Dist = 290.9508721767887\n",
+      "S240422ed Dist = 188.18928254533978\n",
+      "S241011k Dist = 212.20409963130336\n",
+      "S230810af Dist = 100.4032777442462\n",
+      "S230830b Dist = 214.0960402190468\n"
      ]
     }
    ],
    "source": [
     "import os\n",
-    "process_area = True\n",
+    "process_area = False\n",
     "file_list = os.listdir(save_dir)\n",
     "skymap_data = {}\n",
     "for filename in file_list:\n",
@@ -360,6 +334,8 @@
     "                ra, dec, a, b, pa, area = postprocess.find_ellipse(prob)\n",
     "                print(event_id+' Dist = {},  A90 = {}'.format(meta['distmean'],area))\n",
     "                skymap_data[event_id]['A90'] = area\n",
+    "            else:\n",
+    "                print(event_id+' Dist = {}'.format(meta['distmean']))\n",
     "    except:\n",
     "        print(filename)\n",
     "        "
