--- a/Examples.ipynb
+++ b/Examples.ipynb
@@ -17,39 +17,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/anaconda3/lib/python3.12/site-packages/ligo/lw/lsctables.py:89: UserWarning: Wswiglal-redir-stdio:\n",
-      "\n",
-      "SWIGLAL standard output/error redirection is enabled in IPython.\n",
-      "This may lead to performance penalties. To disable locally, use:\n",
-      "\n",
-      "with lal.no_swig_redirect_standard_output_error():\n",
-      "    ...\n",
-      "\n",
-      "To disable globally, use:\n",
-      "\n",
-      "lal.swig_redirect_standard_output_error(False)\n",
-      "\n",
-      "Note however that this will likely lead to error messages from\n",
-      "LAL functions being either misdirected or lost when called from\n",
-      "Jupyter notebooks.\n",
-      "\n",
-      "To suppress this warning, use:\n",
-      "\n",
-      "import warnings\n",
-      "warnings.filterwarnings(\"ignore\", \"Wswiglal-redir-stdio\")\n",
-      "import lal\n",
-      "\n",
-      "  import lal\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import EPTools\n",
     "from astropy.coordinates import SkyCoord\n",
@@ -61,8 +31,11 @@
     "from ligo.skymap.postprocess import crossmatch\n",
     "from astropy.table import Table\n",
     "from ligo.skymap.io.fits import read_sky_map\n",
-    "from astropy.config import create_config_file\n",
-    "from astropy.config import get_config_dir\n",
+    "import sys\n",
+    "sys.path.append('$HEADAS/lib/python')\n",
+    "from xspec import *\n",
+    "#from astropy.config import create_config_file\n",
+    "#from astropy.config import get_config_dir\n",
     "#create_config_file('astropy')\n",
     "#get_config_dir()"
    ]
