--- a/GW_O4.ipynb
+++ b/GW_O4.ipynb
@@ -9,39 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/anaconda3/lib/python3.12/site-packages/ligo/lw/lsctables.py:89: UserWarning: Wswiglal-redir-stdio:\n",
-      "\n",
-      "SWIGLAL standard output/error redirection is enabled in IPython.\n",
-      "This may lead to performance penalties. To disable locally, use:\n",
-      "\n",
-      "with lal.no_swig_redirect_standard_output_error():\n",
-      "    ...\n",
-      "\n",
-      "To disable globally, use:\n",
-      "\n",
-      "lal.swig_redirect_standard_output_error(False)\n",
-      "\n",
-      "Note however that this will likely lead to error messages from\n",
-      "LAL functions being either misdirected or lost when called from\n",
-      "Jupyter notebooks.\n",
-      "\n",
-      "To suppress this warning, use:\n",
-      "\n",
-      "import warnings\n",
-      "warnings.filterwarnings(\"ignore\", \"Wswiglal-redir-stdio\")\n",
-      "import lal\n",
-      "\n",
-      "  import lal\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import EPTools\n",
     "import sys\n",
@@ -400,6 +370,94 @@
     "ax.set_title('BBH in O4, FAR<'+r'$1 \\mathrm{yr}^{-1}$')\n",
     "print(len(list(skymap_data.keys())))\n",
     "plt.savefig('/Users/liangrunduo/EP/Results/BBH_O4_summary.pdf',dpi=300)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Process EP Plan"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Registering EP Mock Band\n",
+      "Registering EP Mock Band\n"
+     ]
+    }
+   ],
+   "source": [
+    "from EPTools.gw_em import *\n",
+    "register_epband()\n",
+    "\n",
+    "def make_EPPlan(filename:str,instrument:str):\n",
+    "    zp = 15.\n",
+    "    pointings = pd.read_csv(filename)\n",
+    "\n",
+    "    try:\n",
+    "        register_epband()\n",
+    "        print('Registering EP Mock Band')\n",
+    "    except:\n",
+    "        print('EP Mock Band was registered')\n",
+    "        \n",
+    "    if instrument == 'WXT':\n",
+    "        width, height = np.sqrt(75), np.sqrt(75)\n",
+    "        band = 'epwxt'\n",
+    "        ra = pointings['Pointing RA']\n",
+    "        dec = pointings['Pointing Dec']\n",
+    "        expo = pointings['Exposure (s)']\n",
+    "        time = Time(list(pointings['Obs Start Time (UTC)'].to_numpy()),format='isot', scale='utc').mjd\n",
+    "\n",
+    "    elif instrument == 'FXT':\n",
+    "        width, height = 1, 1\n",
+    "        band = 'epfxt'\n",
+    "        ra = pointings['Pnt_RA']\n",
+    "        dec = pointings['Pnt_Dec']\n",
+    "        expo = pointings['Exposure Time (s)']\n",
+    "        time = Time(list(pointings['Obs Start Time (UTC) '].to_numpy()), format='iso', scale='utc').mjd\n",
+    "    \n",
+    "\n",
+    "    mAB = EPTools.gw_em.EPexpo2mAB(expo,instrument=instrument)\n",
+    "    zp = zp * np.ones(ra.shape)\n",
+    "    band = [band] * len(ra)\n",
+    "    skynoise = 20**(-0.4 * (mAB - zp)) / 5\n",
+    "\n",
+    "    plan = simsurvey.SurveyPlan(time=time,\n",
+    "                                band=band,\n",
+    "                                ra=ra,\n",
+    "                                dec=dec,\n",
+    "                                skynoise=skynoise,\n",
+    "                                obs_ccd=None,\n",
+    "                                zp=zp,\n",
+    "                                comment=[' ']*len(ra),\n",
+    "                                height=height,\n",
+    "                                width=width\n",
+    "                                )\n",
+    "    \n",
+    "    return plan\n",
+    "\n",
+    "file_root = '/Users/liangrunduo/EP/GW/Plans/S241109bn/'\n",
+    "wxt_fname = 'wxt_obs_S241109bn.csv'\n",
+    "fxt_fname = 'fxt_obs_S241109bn.csv'\n",
+    "\n",
+    "\n",
+    "\n",
+    "wxtplan = make_EPPlan(file_root+wxt_fname,instrument='WXT')\n",
+    "with open(file_root+'WXT_plan.pkl','wb') as f:\n",
+    "    pickle.dump(wxtplan,f)\n",
+    "    f.close()\n",
+    "\n",
+    "fxtplan = make_EPPlan(file_root+fxt_fname,instrument='FXT')\n",
+    "with open(file_root+'FXT_plan.pkl','wb') as f:\n",
+    "    pickle.dump(wxtplan,f)\n",
+    "    f.close()"
    ]
   }
  ],
