--- a/GW_O4.ipynb
+++ b/GW_O4.ipynb
@@ -9,12 +9,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/liangrunduo/miniconda3/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "/Users/liangrunduo/miniconda3/lib/python3.11/site-packages/ligo/lw/lsctables.py:89: UserWarning: Wswiglal-redir-stdio:\n",
+      "\n",
+      "SWIGLAL standard output/error redirection is enabled in IPython.\n",
+      "This may lead to performance penalties. To disable locally, use:\n",
+      "\n",
+      "with lal.no_swig_redirect_standard_output_error():\n",
+      "    ...\n",
+      "\n",
+      "To disable globally, use:\n",
+      "\n",
+      "lal.swig_redirect_standard_output_error(False)\n",
+      "\n",
+      "Note however that this will likely lead to error messages from\n",
+      "LAL functions being either misdirected or lost when called from\n",
+      "Jupyter notebooks.\n",
+      "\n",
+      "To suppress this warning, use:\n",
+      "\n",
+      "import warnings\n",
+      "warnings.filterwarnings(\"ignore\", \"Wswiglal-redir-stdio\")\n",
+      "import lal\n",
+      "\n",
+      "  import lal\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " %PGPLOT, Unable to read font file: grfont.dat\n",
+      " %PGPLOT, Use environment variable PGPLOT_FONT to specify the location of the PGPLOT grfont.dat file.\n"
+     ]
+    }
+   ],
    "source": [
     "import EPTools\n",
-    "import sys\n",
+    "import os, sys\n",
     "sys.path.append('/Users/liangrunduo/EP/Tools/')\n",
     "from astropy.cosmology import Planck18\n",
     "from astropy.coordinates import SkyCoord\n",
@@ -27,7 +67,8 @@
     "from toolkit import *\n",
     "import subprocess\n",
     "save_dir = '/Users/liangrunduo/EP/GW/'\n",
-    "client = GraceDb()"
+    "client = GraceDb()\n",
+    "home_dir = os.getcwd()"
    ]
   },
   {
@@ -381,15 +422,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Registering EP Mock Band\n",
-      "Registering EP Mock Band\n"
+      "0      2.681285\n",
+      "1      2.632843\n",
+      "2      2.644415\n",
+      "3      2.530972\n",
+      "4      0.994838\n",
+      "         ...   \n",
+      "137    3.575390\n",
+      "138    3.575390\n",
+      "139    3.575390\n",
+      "140    3.575390\n",
+      "141    3.571269\n",
+      "Name: Exposure (s), Length: 142, dtype: float64\n",
+      "0      11.117955\n",
+      "1      11.117414\n",
+      "2      11.227306\n",
+      "3      11.227308\n",
+      "4      10.950426\n",
+      "         ...    \n",
+      "442     9.576404\n",
+      "443     9.561155\n",
+      "444     9.561157\n",
+      "445    12.686243\n",
+      "446    12.686250\n",
+      "Name: Exposure Time (s), Length: 447, dtype: float64\n"
      ]
     }
    ],
@@ -398,12 +461,11 @@
     "register_epband()\n",
     "\n",
     "def make_EPPlan(filename:str,instrument:str):\n",
-    "    zp = 15.\n",
+    "    zp = 26.\n",
     "    pointings = pd.read_csv(filename)\n",
     "\n",
     "    try:\n",
     "        register_epband()\n",
-    "        print('Registering EP Mock Band')\n",
     "    except:\n",
     "        print('EP Mock Band was registered')\n",
     "        \n",
@@ -418,16 +480,17 @@
     "    elif instrument == 'FXT':\n",
     "        width, height = 1, 1\n",
     "        band = 'epfxt'\n",
-    "        ra = pointings['Pnt_RA']\n",
-    "        dec = pointings['Pnt_Dec']\n",
+    "        ra = pointings['Obj_RA']\n",
+    "        dec = pointings['Obj_Dec']\n",
     "        expo = pointings['Exposure Time (s)']\n",
     "        time = Time(list(pointings['Obs Start Time (UTC) '].to_numpy()), format='iso', scale='utc').mjd\n",
     "    \n",
     "\n",
     "    mAB = EPTools.gw_em.EPexpo2mAB(expo,instrument=instrument)\n",
+    "    print(mAB)\n",
     "    zp = zp * np.ones(ra.shape)\n",
     "    band = [band] * len(ra)\n",
-    "    skynoise = 20**(-0.4 * (mAB - zp)) / 5\n",
+    "    skynoise = 10**(-0.4 * (mAB - zp)) / 5\n",
     "\n",
     "    plan = simsurvey.SurveyPlan(time=time,\n",
     "                                band=band,\n",
@@ -443,21 +506,96 @@
     "    \n",
     "    return plan\n",
     "\n",
-    "file_root = '/Users/liangrunduo/EP/GW/Plans/S241109bn/'\n",
+    "#file_root = '/Users/liangrunduo/EP/GW/Plans/S241109bn/'\n",
+    "file_root = '/Users/liangrunduo/Desktop/Aujust/NAOC/EP/GW/Plans/'\n",
     "wxt_fname = 'wxt_obs_S241109bn.csv'\n",
     "fxt_fname = 'fxt_obs_S241109bn.csv'\n",
     "\n",
     "\n",
     "\n",
     "wxtplan = make_EPPlan(file_root+wxt_fname,instrument='WXT')\n",
-    "with open(file_root+'WXT_plan.pkl','wb') as f:\n",
-    "    pickle.dump(wxtplan,f)\n",
+    "with open(file_root+'S241109bn_WXT_plan.pkl','wb') as f:\n",
+    "    pickle.dump(wxtplan,f,protocol=pickle.HIGHEST_PROTOCOL)\n",
     "    f.close()\n",
     "\n",
     "fxtplan = make_EPPlan(file_root+fxt_fname,instrument='FXT')\n",
-    "with open(file_root+'FXT_plan.pkl','wb') as f:\n",
-    "    pickle.dump(wxtplan,f)\n",
+    "with open(file_root+'S241109bn_FXT_plan.pkl','wb') as f:\n",
+    "    pickle.dump(fxtplan,f,protocol=pickle.HIGHEST_PROTOCOL)\n",
     "    f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><i>Table length=447</i>\n",
+       "<table id=\"table10846735248\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<thead><tr><th>time</th><th>band</th><th>zp</th><th>skynoise</th><th>RA</th><th>Dec</th><th>field</th><th>ccd</th><th>comment</th></tr></thead>\n",
+       "<thead><tr><th>float64</th><th>str5</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>str1</th></tr></thead>\n",
+       "<tr><td>60423.02446759259</td><td>epfxt</td><td>26.0</td><td>179410.5340690176</td><td>123.338</td><td>-28.0370007</td><td>nan</td><td>nan</td><td></td></tr>\n",
+       "<tr><td>60423.02447916667</td><td>epfxt</td><td>26.0</td><td>179499.89690122262</td><td>123.338</td><td>-28.0370007</td><td>nan</td><td>nan</td><td></td></tr>\n",
+       "<tr><td>60423.089849537035</td><td>epfxt</td><td>26.0</td><td>162221.25938101587</td><td>116.009</td><td>-22.789</td><td>nan</td><td>nan</td><td></td></tr>\n",
+       "<tr><td>60423.08986111111</td><td>epfxt</td><td>26.0</td><td>162220.8922771654</td><td>116.009</td><td>-22.789</td><td>nan</td><td>nan</td><td></td></tr>\n",
+       "<tr><td>60423.166666666664</td><td>epfxt</td><td>26.0</td><td>209343.4698025085</td><td>120.62</td><td>-29.209</td><td>nan</td><td>nan</td><td></td></tr>\n",
+       "<tr><td>60423.166666666664</td><td>epfxt</td><td>26.0</td><td>209466.8992008105</td><td>120.62</td><td>-29.209</td><td>nan</td><td>nan</td><td></td></tr>\n",
+       "<tr><td>60423.22993055556</td><td>epfxt</td><td>26.0</td><td>244094.69562201132</td><td>119.5458755</td><td>-27.7756119</td><td>nan</td><td>nan</td><td></td></tr>\n",
+       "<tr><td>60423.22993055556</td><td>epfxt</td><td>26.0</td><td>244432.19399762253</td><td>119.5458755</td><td>-27.7756119</td><td>nan</td><td>nan</td><td></td></tr>\n",
+       "<tr><td>60423.32241898148</td><td>epfxt</td><td>26.0</td><td>762618.3004568253</td><td>121.4885864</td><td>-26.8308601</td><td>nan</td><td>nan</td><td></td></tr>\n",
+       "<tr><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td></tr>\n",
+       "<tr><td>60426.37278935185</td><td>epfxt</td><td>26.0</td><td>724606.9287943819</td><td>120.772</td><td>-26.2001991</td><td>nan</td><td>nan</td><td></td></tr>\n",
+       "<tr><td>60426.37278935185</td><td>epfxt</td><td>26.0</td><td>724605.4358858194</td><td>120.772</td><td>-26.2001991</td><td>nan</td><td>nan</td><td></td></tr>\n",
+       "<tr><td>60426.376979166664</td><td>epfxt</td><td>26.0</td><td>718205.1056504913</td><td>121.174</td><td>-26.9703007</td><td>nan</td><td>nan</td><td></td></tr>\n",
+       "<tr><td>60426.376979166664</td><td>epfxt</td><td>26.0</td><td>718203.6276283638</td><td>121.174</td><td>-26.9703007</td><td>nan</td><td>nan</td><td></td></tr>\n",
+       "<tr><td>60426.381585648145</td><td>epfxt</td><td>26.0</td><td>742111.9114017768</td><td>126.61</td><td>-27.3603992</td><td>nan</td><td>nan</td><td></td></tr>\n",
+       "<tr><td>60426.381585648145</td><td>epfxt</td><td>26.0</td><td>742110.3757232848</td><td>126.61</td><td>-27.3603992</td><td>nan</td><td>nan</td><td></td></tr>\n",
+       "<tr><td>60426.38579861111</td><td>epfxt</td><td>26.0</td><td>752606.7611475929</td><td>124.404</td><td>-31.2167</td><td>nan</td><td>nan</td><td></td></tr>\n",
+       "<tr><td>60426.38579861111</td><td>epfxt</td><td>26.0</td><td>752605.1964396196</td><td>124.404</td><td>-31.2167</td><td>nan</td><td>nan</td><td></td></tr>\n",
+       "<tr><td>60426.39114583333</td><td>epfxt</td><td>26.0</td><td>42318.745765245956</td><td>121.857</td><td>-29.462</td><td>nan</td><td>nan</td><td></td></tr>\n",
+       "<tr><td>60426.39114583333</td><td>epfxt</td><td>26.0</td><td>42318.46047321135</td><td>121.857</td><td>-29.462</td><td>nan</td><td>nan</td><td></td></tr>\n",
+       "</table></div>"
+      ],
+      "text/plain": [
+       "<Table length=447>\n",
+       "       time         band    zp        skynoise      ...  field    ccd   comment\n",
+       "     float64        str5 float64      float64       ... float64 float64   str1 \n",
+       "------------------ ----- ------- ------------------ ... ------- ------- -------\n",
+       " 60423.02446759259 epfxt    26.0  179410.5340690176 ...     nan     nan        \n",
+       " 60423.02447916667 epfxt    26.0 179499.89690122262 ...     nan     nan        \n",
+       "60423.089849537035 epfxt    26.0 162221.25938101587 ...     nan     nan        \n",
+       " 60423.08986111111 epfxt    26.0  162220.8922771654 ...     nan     nan        \n",
+       "60423.166666666664 epfxt    26.0  209343.4698025085 ...     nan     nan        \n",
+       "60423.166666666664 epfxt    26.0  209466.8992008105 ...     nan     nan        \n",
+       " 60423.22993055556 epfxt    26.0 244094.69562201132 ...     nan     nan        \n",
+       " 60423.22993055556 epfxt    26.0 244432.19399762253 ...     nan     nan        \n",
+       " 60423.32241898148 epfxt    26.0  762618.3004568253 ...     nan     nan        \n",
+       "               ...   ...     ...                ... ...     ...     ...     ...\n",
+       " 60426.37278935185 epfxt    26.0  724606.9287943819 ...     nan     nan        \n",
+       " 60426.37278935185 epfxt    26.0  724605.4358858194 ...     nan     nan        \n",
+       "60426.376979166664 epfxt    26.0  718205.1056504913 ...     nan     nan        \n",
+       "60426.376979166664 epfxt    26.0  718203.6276283638 ...     nan     nan        \n",
+       "60426.381585648145 epfxt    26.0  742111.9114017768 ...     nan     nan        \n",
+       "60426.381585648145 epfxt    26.0  742110.3757232848 ...     nan     nan        \n",
+       " 60426.38579861111 epfxt    26.0  752606.7611475929 ...     nan     nan        \n",
+       " 60426.38579861111 epfxt    26.0  752605.1964396196 ...     nan     nan        \n",
+       " 60426.39114583333 epfxt    26.0 42318.745765245956 ...     nan     nan        \n",
+       " 60426.39114583333 epfxt    26.0  42318.46047321135 ...     nan     nan        "
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "with open('../GW/Plans/S240422ed_FXT_plan.pkl','rb') as f:\n",
+    "    plan = pickle.load(f)\n",
+    "    f.close()\n",
+    "\n",
+    "plan.pointings"
    ]
   }
  ],
@@ -477,7 +615,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
