--- a/GW_O4.ipynb
+++ b/GW_O4.ipynb
@@ -9,49 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/liangrunduo/miniconda3/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "/Users/liangrunduo/miniconda3/lib/python3.11/site-packages/ligo/lw/lsctables.py:89: UserWarning: Wswiglal-redir-stdio:\n",
-      "\n",
-      "SWIGLAL standard output/error redirection is enabled in IPython.\n",
-      "This may lead to performance penalties. To disable locally, use:\n",
-      "\n",
-      "with lal.no_swig_redirect_standard_output_error():\n",
-      "    ...\n",
-      "\n",
-      "To disable globally, use:\n",
-      "\n",
-      "lal.swig_redirect_standard_output_error(False)\n",
-      "\n",
-      "Note however that this will likely lead to error messages from\n",
-      "LAL functions being either misdirected or lost when called from\n",
-      "Jupyter notebooks.\n",
-      "\n",
-      "To suppress this warning, use:\n",
-      "\n",
-      "import warnings\n",
-      "warnings.filterwarnings(\"ignore\", \"Wswiglal-redir-stdio\")\n",
-      "import lal\n",
-      "\n",
-      "  import lal\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " %PGPLOT, Unable to read font file: grfont.dat\n",
-      " %PGPLOT, Use environment variable PGPLOT_FONT to specify the location of the PGPLOT grfont.dat file.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import EPTools\n",
     "import os, sys\n",
@@ -422,37 +382,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0      2.681285\n",
-      "1      2.632843\n",
-      "2      2.644415\n",
-      "3      2.530972\n",
-      "4      0.994838\n",
-      "         ...   \n",
-      "137    3.575390\n",
-      "138    3.575390\n",
-      "139    3.575390\n",
-      "140    3.575390\n",
-      "141    3.571269\n",
-      "Name: Exposure (s), Length: 142, dtype: float64\n",
-      "0      11.117955\n",
-      "1      11.117414\n",
-      "2      11.227306\n",
-      "3      11.227308\n",
-      "4      10.950426\n",
+      "0       9.561155\n",
+      "1       9.561157\n",
+      "2       9.576401\n",
+      "3       9.576404\n",
+      "4       9.611954\n",
       "         ...    \n",
-      "442     9.576404\n",
-      "443     9.561155\n",
-      "444     9.561157\n",
-      "445    12.686243\n",
-      "446    12.686250\n",
-      "Name: Exposure Time (s), Length: 447, dtype: float64\n"
+      "423    10.949786\n",
+      "424    11.227308\n",
+      "425    11.227306\n",
+      "426    11.117414\n",
+      "427    11.117955\n",
+      "Name: Exposure Time (s), Length: 428, dtype: float64\n"
      ]
     }
    ],
@@ -461,7 +409,7 @@
     "register_epband()\n",
     "\n",
     "def make_EPPlan(filename:str,instrument:str):\n",
-    "    zp = 26.\n",
+    "    zp = 15.\n",
     "    pointings = pd.read_csv(filename)\n",
     "\n",
     "    try:\n",
@@ -506,20 +454,20 @@
     "    \n",
     "    return plan\n",
     "\n",
-    "#file_root = '/Users/liangrunduo/EP/GW/Plans/S241109bn/'\n",
-    "file_root = '/Users/liangrunduo/Desktop/Aujust/NAOC/EP/GW/Plans/'\n",
+    "file_root = '/Users/liangrunduo/EP/GW/Plans/S240422ed/'\n",
+    "#file_root = '/Users/liangrunduo/Desktop/Aujust/NAOC/EP/GW/Plans/'\n",
     "wxt_fname = 'wxt_obs_S241109bn.csv'\n",
-    "fxt_fname = 'fxt_obs_S241109bn.csv'\n",
+    "fxt_fname = 'fxt_obs_S240422ed.csv'\n",
     "\n",
     "\n",
     "\n",
-    "wxtplan = make_EPPlan(file_root+wxt_fname,instrument='WXT')\n",
-    "with open(file_root+'S241109bn_WXT_plan.pkl','wb') as f:\n",
-    "    pickle.dump(wxtplan,f,protocol=pickle.HIGHEST_PROTOCOL)\n",
-    "    f.close()\n",
+    "# wxtplan = make_EPPlan(file_root+wxt_fname,instrument='WXT')\n",
+    "# with open(file_root+'S241109bn_WXT_plan.pkl','wb') as f:\n",
+    "#     pickle.dump(wxtplan,f,protocol=pickle.HIGHEST_PROTOCOL)\n",
+    "#     f.close()\n",
     "\n",
     "fxtplan = make_EPPlan(file_root+fxt_fname,instrument='FXT')\n",
-    "with open(file_root+'S241109bn_FXT_plan.pkl','wb') as f:\n",
+    "with open(file_root+'S240422ed_FXT_plan.pkl','wb') as f:\n",
     "    pickle.dump(fxtplan,f,protocol=pickle.HIGHEST_PROTOCOL)\n",
     "    f.close()"
    ]
@@ -615,7 +563,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
