--- a/Examples.ipynb
+++ b/Examples.ipynb
@@ -404,6 +404,55 @@
    "source": [
     "## Plot and fit long-term flares"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## SBO"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "44.64710613238465 Mpc\n",
+      "8.899793790796604\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "4.192783292648514e-11"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#SBO detection rate\n",
+    "z = 0.01\n",
+    "dL = Planck18.luminosity_distance(z).value * 1e6\n",
+    "print(Planck18.luminosity_distance(z))\n",
+    "print(Planck18.luminosity_distance(z).value**3*1e-4)\n",
+    "lum2flux(1e43,dL)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_dir = '/Users/liangrunduo/EP/EP-TA-data/EP241021a/data_EP241021a.csv'\n"
+   ]
   }
  ],
  "metadata": {
